--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "date-fns": "^2.29.3",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
+    "geolib": "^3.3.3",
     "heroicons": "^2.0.17",
+    "mapbox-gl": "^2.13.0",
     "next": "13.2.4",
     "react": "^18.2.0",
     "react-date-range": "^1.4.0",
     "react-dom": "18.2.0",
+    "react-map-gl": "^7.0.21",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
